--- a/report/blog-2025-review/index.html
+++ b/report/blog-2025-review/index.html
@@ -9,7 +9,7 @@
     <meta name="revisit-after" content="7 days">
 
     <title>페블러스 블로그 2025년 결산: 3개월간의 기록 | 페블러스</title>
-    <meta name="description" content="2025년 9월부터 12월까지 3개월간 753 커밋, 57개 기사, 86,000줄 코드로 구축된 페블러스 블로그의 개발 여정을 돌아봅니다.">
+    <meta name="description" content="2025년 9월부터 12월까지 3개월간 753회 커밋, 57개 기사, 86,000줄 코드로 구축된 페블러스 블로그의 개발 여정을 돌아봅니다.">
     <meta name="keywords" content="페블러스 블로그, 2025년 결산, 블로그 제작기, GitHub 통계, 소스 코드 통계, 개발 회고, Pebblous Blog">
 
     <link rel="canonical" href="https://blog.pebblous.ai/report/blog-2025-review/">
@@ -17,10 +17,12 @@
 
     <!-- Open Graph -->
     <meta property="og:title" content="페블러스 블로그 2025년 결산: 3개월간의 기록">
-    <meta property="og:description" content="753 커밋, 57개 기사, 86,000줄 코드. 페블러스 블로그의 3개월 개발 여정.">
+    <meta property="og:description" content="753회 커밋, 57개 기사, 86,000줄 코드. 페블러스 블로그의 3개월 개발 여정.">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://blog.pebblous.ai/report/blog-2025-review/">
-    <meta property="og:image" content="https://blog.pebblous.ai/image/Pebblous_BM_Orange_RGB.png">
+    <meta property="og:image" content="https://blog.pebblous.ai/report/blog-2025-review/image/index.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Pebblous Blog">
     <meta property="og:locale" content="ko_KR">
     <meta property="article:published_time" content="2025-12-28">
@@ -28,7 +30,8 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="페블러스 블로그 2025년 결산">
-    <meta name="twitter:description" content="3개월간 753 커밋, 57개 기사, 86,000줄 코드의 개발 여정">
+    <meta name="twitter:description" content="3개월간 753회 커밋, 57개 기사, 86,000줄 코드의 개발 여정">
+    <meta name="twitter:image" content="https://blog.pebblous.ai/report/blog-2025-review/image/index.png">
 
     <!-- Favicon -->
     <link rel="icon" href="/image/favicon.ico" sizes="any">
@@ -47,7 +50,8 @@
         "@context": "https://schema.org",
         "@type": "Article",
         "headline": "페블러스 블로그 2025년 결산: 3개월간의 기록",
-        "description": "2025년 9월부터 12월까지 3개월간 753 커밋, 57개 기사, 86,000줄 코드로 구축된 페블러스 블로그의 개발 여정.",
+        "description": "2025년 9월부터 12월까지 3개월간 753회 커밋, 57개 기사, 86,000줄 코드로 구축된 페블러스 블로그의 개발 여정.",
+        "image": "https://blog.pebblous.ai/report/blog-2025-review/image/index.png",
         "author": {
             "@type": "Organization",
             "name": "Pebblous"
@@ -421,14 +425,12 @@
             <main class="max-w-[800px] px-4 sm:px-6">
 
                 <!-- Breadcrumb -->
-                <nav class="text-sm mb-6">
-                    <ol class="flex items-center space-x-2 themeable-muted">
-                        <li><a href="/" class="hover:text-orange-400">Home</a></li>
-                        <li>/</li>
-                        <li><a href="/report/" class="hover:text-orange-400">Report</a></li>
-                        <li>/</li>
-                        <li class="themeable-text">2025년 결산</li>
-                    </ol>
+                <nav class="text-sm mb-6 themeable-muted">
+                    <a href="/" class="hover:text-orange-400">Home</a>
+                    <span class="mx-2">/</span>
+                    <a href="/report/" class="hover:text-orange-400">Report</a>
+                    <span class="mx-2">/</span>
+                    <span class="themeable-text">2025년 결산</span>
                 </nav>
 
                 <!-- Hero Section -->
@@ -459,7 +461,7 @@
                         <div class="stat-card teal">
                             <div class="stat-value teal">57</div>
                             <div class="stat-label">발행 기사</div>
-                            <div class="stat-desc">Tech 20, Art 23, Business 8, Story 6개. 4개 섹션 균형 발행</div>
+                            <div class="stat-desc">Tech 20개, Art 23개, Business 8개, Story 6개. 4개 섹션별로 균형있게 발행</div>
                         </div>
                         <div class="stat-card">
                             <div class="stat-value">86K</div>
@@ -468,8 +470,8 @@
                         </div>
                         <div class="stat-card teal">
                             <div class="stat-value teal">130K</div>
-                            <div class="stat-label">워드 (MD)</div>
-                            <div class="stat-desc">53개 마크다운 파일. 단행본 1권(8-10만 단어) 초과 분량</div>
+                            <div class="stat-label">단어 (MD)</div>
+                            <div class="stat-desc">53개 마크다운 파일. 단어수 기준 단행본 1권(8-10만 단어) 초과 분량</div>
                         </div>
                     </div>
                 </section>
@@ -496,15 +498,15 @@
                         </div>
                         <div class="data-card-alt">
                             <div class="text-sm themeable-muted mb-1">주당 평균</div>
-                            <div class="text-xl font-semibold themeable-heading">53.8</div>
+                            <div class="text-xl font-semibold themeable-heading">53.8회</div>
                         </div>
                         <div class="data-card-alt">
                             <div class="text-sm themeable-muted mb-1">피크 주간</div>
-                            <div class="text-xl font-semibold text-orange-500">128</div>
+                            <div class="text-xl font-semibold text-orange-500">128회</div>
                         </div>
                         <div class="data-card-alt">
                             <div class="text-sm themeable-muted mb-1">하루 최대</div>
-                            <div class="text-xl font-semibold themeable-heading">26</div>
+                            <div class="text-xl font-semibold themeable-heading">26회</div>
                         </div>
                     </div>
                 </section>
@@ -622,7 +624,7 @@
                         </div>
                         <div class="stat-card">
                             <div class="text-2xl font-bold themeable-heading mb-1">129,771</div>
-                            <div class="text-sm themeable-muted">총 워드</div>
+                            <div class="text-sm themeable-muted">총 단어수</div>
                         </div>
                         <div class="stat-card teal">
                             <div class="text-2xl font-bold themeable-heading mb-1">15,898</div>
@@ -630,12 +632,13 @@
                         </div>
                         <div class="stat-card">
                             <div class="text-2xl font-bold themeable-heading mb-1">2,448</div>
-                            <div class="text-sm themeable-muted">파일당 평균</div>
+                            <div class="text-sm themeable-muted">파일당 평균 단어수</div>
                         </div>
                     </div>
 
                     <div class="highlight-box">
                         <p class="themeable-text">
+                            MD 파일은 블로그 포스팅을 자동 생성하기 위한 기초 콘텐츠입니다.
                             <span class="text-teal-600 font-semibold">129,771 단어</span>는 일반 단행본 1권 분량(8-10만 단어)을 넘어서는 규모입니다.
                             기술 문서, IR 자료, 예술 에세이까지 다양한 콘텐츠가 축적되었습니다.
                         </p>
@@ -659,7 +662,7 @@
                             <div class="text-3xl font-bold text-purple-600 mb-1">23</div>
                             <div class="text-sm themeable-text">Data Art Lab</div>
                             <div class="text-xs text-purple-500">40.4%</div>
-                            <div class="category-desc">코드 페인팅, 생성 예술, 시각화 실험 등 디지털 아트 작품</div>
+                            <div class="category-desc">코드 페인팅, AI 예술, 시각화 실험 등 디지털 아트 작품</div>
                         </div>
                         <div class="category-card teal">
                             <div class="text-3xl font-bold text-teal-600 mb-1">20</div>
@@ -757,7 +760,7 @@
                         <h2>기술 스택</h2>
                     </div>
 
-                    <div class="grid md:grid-cols-2 gap-6">
+                    <div class="grid md:grid-cols-3 gap-6">
                         <div class="data-card">
                             <h3 class="text-lg font-semibold text-teal-600 mb-4">프론트엔드</h3>
                             <ul class="space-y-2 themeable-text text-sm">
@@ -800,6 +803,23 @@
                                 </li>
                             </ul>
                         </div>
+                        <div class="data-card">
+                            <h3 class="text-lg font-semibold text-purple-600 mb-4">개발 도구</h3>
+                            <ul class="space-y-2 themeable-text text-sm">
+                                <li class="flex items-center gap-2">
+                                    <span class="w-2 h-2 bg-purple-500 rounded-full"></span>
+                                    Visual Studio Code
+                                </li>
+                                <li class="flex items-center gap-2">
+                                    <span class="w-2 h-2 bg-purple-500 rounded-full"></span>
+                                    Claude Code: 웹 개발
+                                </li>
+                                <li class="flex items-center gap-2">
+                                    <span class="w-2 h-2 bg-purple-500 rounded-full"></span>
+                                    AI 글쓰기: Gemini, Claude, ChatGPT
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </section>
 
@@ -814,12 +834,55 @@
                         <h2>회고</h2>
                     </div>
 
+                    <!-- 개인 소회 -->
+                    <div class="data-card mb-6">
+                        <div class="themeable-text leading-relaxed space-y-4 text-sm">
+                            <p>
+                                <strong class="text-orange-500">3개월간의 멋진 여정이었습니다.</strong> '바이브 코딩'과 AI 글쓰기가 있었기에 완주할 수 있었던 프로젝트였습니다.
+                            </p>
+                            <p>
+                                지난 3개월은 페블러스에게 눈코 뜰 새 없이 분주한 시기였습니다. 여러 중요한 프로젝트가 동시에 진행되고 있었기 때문입니다.
+                                특히 12월 초 종료를 목표로 팀 전체가 매진했던 <strong class="text-teal-600">AADS 과제</strong>를 비롯해,
+                                전북대와의 첫 번째 피지컬 AI 과제, 현대자동차 강화학습 프로젝트 두 건, 그리고 대구시 30개 기업 대상의 DIP 과제까지 병행해야 했습니다.
+                            </p>
+                            <p>
+                                이 블로그는 이렇게 바쁜 일정 속에서 <strong class="themeable-heading">'주경야독'으로 진행한 개인 사이드 프로젝트</strong>였습니다.
+                                주로 업무가 끝난 밤 시간을 쪼개어 작업했습니다. 덕분에 기술, 예술, 사업을 아우르는 57개의 기사를 작성할 수 있었고,
+                                각 포스팅마다 독창적인 인터랙티브 요소를 구현하기 위해 753회의 커밋을 거쳐 총 8만 6천 라인의 코드를 작성했습니다.
+                            </p>
+                            <p>
+                                예술 관련 기사를 제외한 모든 포스팅은 기초 자료를 마크다운으로 작성한 뒤, Claude를 활용해 HTML/JavaScript로 자동 생성하는 방식을 택했습니다.
+                                작성된 기초 자료(마크다운)만 해도 13만 단어에 달해 책 한 권 분량이 훌쩍 넘습니다.
+                                2025년 9월 28일에 첫 커밋을 올렸으니, 12월 28일인 오늘로 딱 3개월을 맞이한 프로젝트입니다.
+                            </p>
+                            <p>
+                                현재 페블러스는 두 개의 블로그를 운영 중입니다. <a href="https://blog.pebblous.ai" class="text-orange-500 hover:underline">blog.pebblous.ai</a>는
+                                제가 전담하여 기술과 사업적 통찰을 깊이 있게 다루고 있으며, <a href="https://blog.dataclinic.ai" class="text-teal-600 hover:underline">blog.dataclinic.ai</a>는
+                                제품 홍보와 관련된 내용을 보다 경쾌한 톤으로 전달하고 있습니다. 이 두 블로그의 시너지 효과 덕분에 구글 검색 주요 키워드에서도 성과를 보이고 있습니다.
+                                일례로 <strong class="themeable-heading">"피지컬 AI 데이터"</strong>를 검색하면 꽤 상위에 노출되고 있습니다.
+                            </p>
+                            <p>
+                                이러한 가시적인 성과 덕분에 큰 보람을 느낍니다. <strong class="text-orange-500">다가오는 2026년에도</strong> 더 깊이 있고, 재미있으며, 유익한 기사들로 페블러스 블로그를 키워나가겠습니다.
+                                올해 3개월 동안 57개의 기사를 만들었으니, 내년에는 최소 200개 이상의 글을 발행할 수 있을 것으로 기대합니다.
+                            </p>
+                            <p>
+                                흔히 '양보다는 질'이라고 하지만, AI 시대에는 이 말이 반드시 정답은 아닌 것 같습니다.
+                                그럼에도 불구하고, <strong class="text-teal-600">AI를 활용하되 사람의 향기가 물씬 풍기는 블로그</strong>를 부지런히 만들어 가보겠습니다.
+                            </p>
+                            <p>
+                                개인적으로는 블로그를 운영하며 스스로 많이 배우고 성장할 수 있어 가장 좋았습니다. 회사 실무에도 도움이 되고,
+                                나아가 잠재 고객과 대중에게도 간접적으로나마 도움이 될 수 있도록 노력하고 있습니다. 많은 응원 부탁드립니다!
+                            </p>
+                        </div>
+                    </div>
+
+                    <!-- 통계 요약 -->
                     <div class="gradient-box">
                         <div class="grid md:grid-cols-2 gap-6">
                             <div>
                                 <h3 class="text-lg font-semibold text-orange-500 mb-3">성과</h3>
                                 <ul class="space-y-2 themeable-text text-sm">
-                                    <li>3개월간 <strong class="text-orange-500">753 커밋</strong> - 주당 평균 53.8 커밋</li>
+                                    <li>3개월간 <strong class="text-orange-500">753회 커밋</strong> - 주당 평균 53.8회</li>
                                     <li><strong class="text-teal-600">57개 기사</strong> 발행 - 기술, 비즈니스, 예술</li>
                                     <li><strong class="themeable-heading">86,000줄</strong> 순수 HTML/CSS/JS 코드</li>
                                     <li><strong class="themeable-heading">130,000 단어</strong> 기술 문서 축적</li>
@@ -984,20 +1047,61 @@
             ]
         };
 
-        function populateArticles(category, elementId) {
-            const tbody = document.getElementById(elementId);
-            tbody.innerHTML = articles[category].map((title, i) =>
-                `<tr>
-                    <td class="py-2 px-4 themeable-muted w-10">${i + 1}</td>
-                    <td class="py-2 px-4 themeable-text">${title}</td>
-                </tr>`
-            ).join('');
+        // Fetch articles.json and populate with real links
+        async function loadArticlesWithLinks() {
+            try {
+                const response = await fetch('/articles.json');
+                const data = await response.json();
+                const allArticles = data.articles;
+
+                // Create lookup map by title
+                const articleMap = {};
+                allArticles.forEach(article => {
+                    articleMap[article.title] = article.path;
+                });
+
+                function populateArticles(category, elementId) {
+                    const tbody = document.getElementById(elementId);
+                    tbody.innerHTML = articles[category].map((title, i) => {
+                        const path = articleMap[title];
+                        if (path) {
+                            return `<tr class="hover:bg-orange-50/50 transition-colors cursor-pointer" onclick="window.location.href='/${path}'">
+                                <td class="py-2 px-4 themeable-muted w-10">${i + 1}</td>
+                                <td class="py-2 px-4"><a href="/${path}" class="themeable-text hover:text-orange-500 transition-colors">${title}</a></td>
+                            </tr>`;
+                        } else {
+                            return `<tr>
+                                <td class="py-2 px-4 themeable-muted w-10">${i + 1}</td>
+                                <td class="py-2 px-4 themeable-text">${title}</td>
+                            </tr>`;
+                        }
+                    }).join('');
+                }
+
+                populateArticles('tech', 'tech-articles');
+                populateArticles('business', 'business-articles');
+                populateArticles('story', 'story-articles');
+                populateArticles('art', 'art-articles');
+            } catch (error) {
+                console.error('Failed to load articles.json:', error);
+                // Fallback: render without links
+                function populateArticles(category, elementId) {
+                    const tbody = document.getElementById(elementId);
+                    tbody.innerHTML = articles[category].map((title, i) =>
+                        `<tr>
+                            <td class="py-2 px-4 themeable-muted w-10">${i + 1}</td>
+                            <td class="py-2 px-4 themeable-text">${title}</td>
+                        </tr>`
+                    ).join('');
+                }
+                populateArticles('tech', 'tech-articles');
+                populateArticles('business', 'business-articles');
+                populateArticles('story', 'story-articles');
+                populateArticles('art', 'art-articles');
+            }
         }
 
-        populateArticles('tech', 'tech-articles');
-        populateArticles('business', 'business-articles');
-        populateArticles('story', 'story-articles');
-        populateArticles('art', 'art-articles');
+        loadArticlesWithLinks();
 
         // Initialize page
         document.addEventListener('DOMContentLoaded', async function() {
