--- a/report/blog-2025-review/index.html
+++ b/report/blog-2025-review/index.html
@@ -9,15 +9,15 @@
     <meta name="revisit-after" content="7 days">
 
     <title>페블러스 블로그 2025년 결산: 3개월간의 기록 | 페블러스</title>
-    <meta name="description" content="2025년 9월부터 12월까지 3개월간 753회 커밋, 57개 기사, 86,000줄 코드로 구축된 페블러스 블로그의 개발 여정을 돌아봅니다.">
-    <meta name="keywords" content="페블러스 블로그, 2025년 결산, 블로그 제작기, GitHub 통계, 소스 코드 통계, 개발 회고, Pebblous Blog">
+    <meta name="description" content="페블러스가 바이브 코딩과 AI 글쓰기로 3개월간 753회 커밋, 57개 기사, 86,000줄 코드를 작성한 블로그 개발 여정. 데이터 품질, 합성데이터, 데이터 클리닉, 피지컬 AI 등 AI 데이터 분야의 통찰을 담았습니다.">
+    <meta name="keywords" content="페블러스, Pebblous, 데이터 품질, Data Quality, 합성데이터, Synthetic Data, 바이브 코딩, Vibe Coding, 데이터 클리닉, Data Clinic, 데이터 그린하우스, Data Greenhouse, 피지컬 AI, Physical AI, AI 데이터, AADS, ISO 5259, 블로그 결산, 2025년 결산, Claude Code, AI 글쓰기">
 
     <link rel="canonical" href="https://blog.pebblous.ai/report/blog-2025-review/">
     <link rel="alternate" hreflang="ko" href="https://blog.pebblous.ai/report/blog-2025-review/">
 
     <!-- Open Graph -->
     <meta property="og:title" content="페블러스 블로그 2025년 결산: 3개월간의 기록">
-    <meta property="og:description" content="753회 커밋, 57개 기사, 86,000줄 코드. 페블러스 블로그의 3개월 개발 여정.">
+    <meta property="og:description" content="바이브 코딩과 AI 글쓰기로 완성한 페블러스 블로그. 데이터 품질, 합성데이터, 피지컬 AI 등 57개 기사의 개발 여정.">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://blog.pebblous.ai/report/blog-2025-review/">
     <meta property="og:image" content="https://blog.pebblous.ai/report/blog-2025-review/image/index.png">
@@ -65,7 +65,82 @@
             }
         },
         "datePublished": "2025-12-28",
-        "dateModified": "2025-12-28"
+        "dateModified": "2025-12-28",
+        "keywords": ["페블러스", "데이터 품질", "합성데이터", "바이브 코딩", "데이터 클리닉", "데이터 그린하우스", "피지컬 AI", "AADS", "ISO 5259"]
+    }
+    </script>
+
+    <!-- JSON-LD: FAQ -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "페블러스(Pebblous)는 어떤 회사인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "페블러스는 AI 데이터 품질 관리 전문 스타트업입니다. 데이터 클리닉(Data Clinic) 솔루션을 통해 AI/ML 학습 데이터의 품질을 진단하고 개선하는 서비스를 제공합니다. ISO/IEC 5259 국제 표준 기반의 데이터 품질 평가와 합성데이터 생성 기술을 보유하고 있습니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "바이브 코딩(Vibe Coding)이란 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "바이브 코딩은 AI 코딩 어시스턴트(Claude Code, GitHub Copilot 등)와 협업하여 코드를 작성하는 새로운 개발 방식입니다. 개발자가 의도와 방향을 제시하면 AI가 코드를 생성하고, 개발자는 이를 검토하고 개선하는 방식으로 생산성을 크게 높일 수 있습니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "데이터 클리닉(Data Clinic)은 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "데이터 클리닉은 페블러스의 핵심 솔루션으로, AI/ML 학습용 데이터의 품질을 진단하고 처방하는 서비스입니다. 데이터의 정확성, 완전성, 일관성, 적시성 등을 ISO/IEC 5259 표준 기반으로 평가하고, 데이터 다이어트(불필요한 데이터 제거)와 벌크업(합성데이터 생성)을 통해 최적의 학습 데이터셋을 구축합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "합성데이터(Synthetic Data)란 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "합성데이터는 실제 데이터의 통계적 특성을 유지하면서 인공적으로 생성된 데이터입니다. 개인정보 보호, 데이터 부족 문제 해결, 희귀 케이스 보강 등에 활용됩니다. 페블러스는 LLM 파인튜닝용 QA 데이터셋 등 고품질 합성데이터 생성 기술을 보유하고 있습니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "데이터 그린하우스(Data Greenhouse)란 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "데이터 그린하우스는 페블러스가 제안하는 AI-Ready 데이터 운영 인프라입니다. 원시 데이터를 수집하고, 품질을 관리하며, AI 학습에 최적화된 데이터셋으로 가공하는 전체 파이프라인을 온실(Greenhouse)처럼 체계적으로 관리합니다. 피지컬 AI 시대를 위한 데이터 공급망 전략입니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "피지컬 AI(Physical AI)란 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "피지컬 AI는 로봇, 자율주행, 제조 등 물리적 세계와 상호작용하는 AI 시스템을 말합니다. NVIDIA의 Omniverse, Tesla의 Optimus, Figure AI 등이 대표적입니다. 페블러스는 피지컬 AI 학습에 필요한 고품질 데이터 파이프라인 구축을 지원합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "AADS란 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "AADS(Agentic AI Data Scientist)는 페블러스가 개발 중인 자율형 AI 데이터 과학자입니다. 데이터 과학자의 80%에 달하는 수동적인 데이터 준비 작업을 자동화하여, 데이터 품질 진단, 편향성 분석, 개인정보보호 규정 준수 등을 자율적으로 수행합니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "ISO/IEC 5259는 무엇인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "ISO/IEC 5259는 AI/ML 환경에 특화된 데이터 품질 국제 표준입니다. 데이터의 정확성, 완전성, 일관성, 적시성, 고유성, 유효성 등 품질 특성을 정의하고 측정 방법을 제시합니다. 페블러스는 이 표준을 기반으로 데이터 품질 평가 프레임워크를 구축하고 있습니다."
+                }
+            }
+        ]
     }
     </script>
 
