--- a/project/DataGreenhouse/data-greenhouse-strategy.html
+++ b/project/DataGreenhouse/data-greenhouse-strategy.html
@@ -313,12 +313,11 @@
         }
 
         .tab-content {
-            display: none;
             animation: fadeIn 0.3s ease;
         }
 
-        .tab-content.active {
-            display: block;
+        .tab-content.hidden {
+            display: none;
         }
 
         @keyframes fadeIn {
@@ -959,7 +958,7 @@
             </div>
 
             <!-- Pattern 1 -->
-            <div class="tab-content active" data-tab-content="pattern1">
+            <div class="tab-content" data-tab-content="pattern1">
                 <div class="pattern-card">
                     <div class="pattern-section">
                         <div class="pattern-label gartner">📘 가트너 정의</div>
@@ -991,7 +990,7 @@
             </div>
 
             <!-- Pattern 2 -->
-            <div class="tab-content" data-tab-content="pattern2">
+            <div class="tab-content hidden" data-tab-content="pattern2">
                 <div class="pattern-card">
                     <div class="pattern-section">
                         <div class="pattern-label gartner">📘 가트너 정의</div>
@@ -1024,7 +1023,7 @@
             </div>
 
             <!-- Pattern 3 -->
-            <div class="tab-content" data-tab-content="pattern3">
+            <div class="tab-content hidden" data-tab-content="pattern3">
                 <div class="pattern-card">
                     <div class="pattern-section">
                         <div class="pattern-label gartner">📘 가트너 정의</div>
@@ -1053,7 +1052,7 @@
             </div>
 
             <!-- Pattern 4 -->
-            <div class="tab-content" data-tab-content="pattern4">
+            <div class="tab-content hidden" data-tab-content="pattern4">
                 <div class="pattern-card">
                     <div class="pattern-section">
                         <div class="pattern-label gartner">📘 가트너 정의</div>
@@ -1433,28 +1432,12 @@
     <div id="footer-placeholder"></div>
 
     <!-- Scripts -->
-    <script src="/scripts/common-utils.js"></script>
+    <script src="/scripts/common-utils.js?v=20260105"></script>
     <script>
-        // Tab functionality
-        document.querySelectorAll('.tab-button').forEach(button => {
-            button.addEventListener('click', function() {
-                const tabContainer = this.closest('[data-tabs]');
-                const targetTab = this.getAttribute('data-tab-button');
-
-                // Update buttons
-                tabContainer.querySelectorAll('.tab-button').forEach(btn => btn.classList.remove('active'));
-                this.classList.add('active');
-
-                // Update content
-                tabContainer.querySelectorAll('.tab-content').forEach(content => content.classList.remove('active'));
-                tabContainer.querySelector(`[data-tab-content="${targetTab}"]`).classList.add('active');
-            });
-        });
-
         // Chart initialization
         function initCharts() {
             const ctx = document.getElementById('marketTrendChart');
-            if (!ctx) return;
+            if (!ctx || typeof PebblousChart === 'undefined') return;
 
             PebblousChart.bar('marketTrendChart', {
                 labels: ['피지컬 AI', '소버린 AI', '데이터 관리 SW', 'AI 모델 경쟁'],
@@ -1469,6 +1452,11 @@
             // Initialize charts
             initCharts();
 
+            // Initialize tabs using PebblousTabs module
+            if (typeof PebblousTabs !== 'undefined') {
+                PebblousTabs.init();
+            }
+
             // Initialize page
             const config = {
                 pageTitle: "2025 데이터 품질관리 시장 분석 및 AADS 전략",
@@ -1478,7 +1466,9 @@
                 tags: ["데이터 품질관리", "AADS", "Data Greenhouse", "가트너", "비즈니스 전략"]
             };
 
-            await PebblousPage.init(config);
+            if (typeof PebblousPage !== 'undefined') {
+                await PebblousPage.init(config);
+            }
 
             // TOC Scroll Sync with IntersectionObserver
             const sections = document.querySelectorAll('section[id]');
