--- a/project/DataClinic/ai-data-qa-framework-01.html
+++ b/project/DataClinic/ai-data-qa-framework-01.html
@@ -42,7 +42,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Common Styles -->
-    <link rel="stylesheet" href="/styles/common-styles.css">
+    <link rel="stylesheet" href="/styles/common-styles.css?v=20260107">
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
