--- a/project/DataClinic/data-greenhouse-investment.html
+++ b/project/DataClinic/data-greenhouse-investment.html
@@ -142,7 +142,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <!-- Common Styles -->
-    <link rel="stylesheet" href="/css/common-styles.css">
+    <link rel="stylesheet" href="/styles/common-styles.css?v=20260107">
 
     <style>
         :root {
