--- a/project/DAL/blog-future-vision.html
+++ b/project/DAL/blog-future-vision.html
@@ -116,7 +116,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Common Styles -->
-    <link rel="stylesheet" href="/styles/common-styles.css">
+    <link rel="stylesheet" href="/styles/common-styles.css?v=20260107">
 
     <style>
         /* Living Pebbles Animation */
