--- a/project/DAL/code-painting.html
+++ b/project/DAL/code-painting.html
@@ -159,7 +159,7 @@
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
 
     <!-- Common Styles -->
-    <link rel="stylesheet" href="../../css/common-styles.css">
+    <link rel="stylesheet" href="/styles/common-styles.css?v=20260107">
 
     <style>
         /* Light Theme (Default) */
