--- a/report/llm-dataset-guide-2025-10-16/ko/index.html
+++ b/report/llm-dataset-guide-2025-10-16/ko/index.html
@@ -99,7 +99,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <!-- Common Styles -->
-    <link rel="stylesheet" href="/styles/common-styles.css">
+    <link rel="stylesheet" href="/styles/common-styles.css?v=20260107">
 </head>
 <body class="antialiased">
 
