--- a/project/PhysicalAI/physical-ai-competition-strategy.html
+++ b/project/PhysicalAI/physical-ai-competition-strategy.html
@@ -428,7 +428,7 @@
 
                 <!-- Hero Section -->
                 <header class="text-center mb-12">
-                    <h1 class="text-3xl md:text-4xl font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
+                    <h1 class="hero-title font-bold themeable-heading mb-4 leading-tight" style="color: #F86825;">
                         피지컬 AI 시대의 패권 경쟁
                     </h1>
                     <p class="text-xl themeable-text mb-2">데이터 중심 생존 전략과 페블러스의 역할</p>
