physical AI update 2026-01-20

--- a/project/PhysicalAI/physical-ai.html
+++ b/project/PhysicalAI/physical-ai.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow">
     <meta name="revisit-after" content="7 days">
 
-    <title>피지컬 AI(Physical AI)란? LLM과 VLA의 차이, 그리고 데이터 전략 | 페블러스</title>
+    <title>피지컬 AI란? LLM과 VLA의 차이, 그리고 데이터 전략 | 페블러스</title>
     <meta name="description" content="피지컬 AI란 무엇인가? LLM(언어)에서 VLM(시각), VLA(행동)까지 AI 모델의 진화와 차이점을 설명합니다. 2025년 40조 원 규모 시장, 센서 퓨전, Sim-to-Real Gap 등 핵심 데이터 전략을 확인하세요.">
     <meta name="keywords" content="피지컬 AI, Physical AI, VLA, VLM, LLM, Vision Language Action, 피지컬 AI 데이터, 센서 퓨전, Sim-to-Real Gap, 합성 데이터, Synthetic Data, 로보틱스 파운데이션 모델, 엠바디드 AI, Embodied AI, 피지컬 AI 2025, 휴머노이드, 스마트 팩토리, AI 자율제조, NVIDIA Omniverse, 디지털 트윈, 페블러스, Pebblous, DataClinic, AI-Ready Data, AI Safety, AI 안전성, 에지 컴퓨팅, Edge Computing, On-device AI, 온디바이스 AI, AI 레드티밍, Edge Case, 에지 케이스, Gartner, 자율 제조, AMR, AGV, Low Latency, Lightweight Data">
 
@@ -17,7 +17,7 @@
     <link rel="alternate" hreflang="x-default" href="https://blog.pebblous.ai/project/PhysicalAI/physical-ai.html">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="피지컬 AI(Physical AI)란? LLM과 VLA의 차이, 그리고 데이터 전략">
+    <meta property="og:title" content="피지컬 AI란? LLM과 VLA의 차이, 그리고 데이터 전략">
     <meta property="og:description" content="LLM→VLM→VLA 모델 진화와 피지컬 AI 데이터 전략. 2025년 40조 원 시장의 핵심을 확인하세요.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://blog.pebblous.ai/project/PhysicalAI/physical-ai.html">
@@ -29,7 +29,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="피지컬 AI(Physical AI)란? LLM과 VLA의 차이, 그리고 데이터 전략">
+    <meta name="twitter:title" content="피지컬 AI란? LLM과 VLA의 차이, 그리고 데이터 전략">
     <meta name="twitter:description" content="LLM→VLM→VLA 모델 진화와 피지컬 AI 데이터 전략. 2025년 40조 원 시장의 핵심.">
     <meta name="twitter:image" content="https://blog.pebblous.ai/project/PhysicalAI/image/physical-ai.png">
 
